/* Copyright (c) 2016 Supreeth Herle <s.herle@create-net.org >
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* 
 * This file carries the syntax of the messages exchanged between an Empower 
 * agent and an Empower controller.
 */

syntax = "proto2";

import "hello.proto";
import "statistics.proto";
import "configs.proto";

//
// Type of recognized messages.
//
enum MsgType {
	// Invalid message; not computed by default.  
	INVALID = 0;
	// Hello request message.
	HELLO_REQ = 1;
	// Hello reply message.
	HELLO_REP = 2;
	// Statistics request message.
	STATS_REQ = 3;
	// Statistics reply message.
	STATS_REP = 4;
	// Configuration request message.
	CONF_REQ = 5;
	// Configuration reply message.
	CONF_REP = 6;
};

//
// Common head to identify the operation.
//
message header {
	// Type of 1st level message. 
	optional MsgType type = 1;
	// Version of 1st level message.
	optional uint32 vers = 2;
	// Base station identifier.
	optional uint32 b_id = 3;
	// Module identifier (Used in Virtualized RAN concepts and OAI).
	optional uint32 m_id = 4;
	// Sequence number.
	optional uint32 seq = 5;
	// Transaction identifier.
	optional uint32 t_id = 6;
}

//
// Master message sent by the agent system.
//
message emage_msg {
	// Header for every message. 
	optional header head = 1;
	// Type of possible messages.
	oneof message {
		hello mHello = 2;
		statistics mStats = 3;
		configs mConfs = 4;
	}
}